--- a/public/css/style.css
+++ b/public/css/style.css
@@ -47,8 +47,8 @@
     --bs-purple: #6f42c1;
     --bs-pink: #d63384;
     --bs-red: #dc3545;
-    --bs-orange: #fd7e14;
-    --bs-yellow: #ffc107;
+    --bs-orange: #facc15;
+    --bs-yellow: #ffd800;
     --bs-green: #198754;
     --bs-teal: #20c997;
     --bs-cyan: #0dcaf0;
@@ -69,7 +69,7 @@
     --bs-secondary: #6c757d;
     --bs-success: #198754;
     --bs-info: #0dcaf0;
-    --bs-warning: #ffc107;
+    --bs-warning: #facc15;
     --bs-danger: #dc3545;
     --bs-light: #f8f9fa;
     --bs-dark: #212529;
@@ -1143,7 +1143,7 @@ a {
     font-weight: 700;
     margin-bottom: 24px;
     text-align: center;
-    text-shadow: 0 0 8px #FFC107;
+    text-shadow: 0 0 8px #ffd800;
     -webkit-user-select: none;
     -moz-user-select: none;
     user-select: none
@@ -1308,7 +1308,7 @@ a {
 }
 
 .single-pill {
-    background: #FFC107;
+    background: #ffd800;
     border-radius: 35px;
     color: #000;
     font-weight: 500;
@@ -1318,7 +1318,7 @@ a {
 }
 
 .single-pill {
-    background: #FFC107;
+    background: #ffd800;
     border-radius: 35px;
     color: #000;
     font-weight: 500;
@@ -1330,7 +1330,7 @@ a {
 
 .single-pill:hover {
     background: #000;
-    color: #FFC107;
+    color: #ffd800;
     cursor: pointer
 }
 
@@ -1360,7 +1360,7 @@ a {
 
 @media (max-width: 767px) {
     .deleteModalA {
-        background-color:#FFC107;
+        background-color:#ffd800;
         border: 3px solid #efefef;
         border-radius: .375rem;
         bottom: 25%;
@@ -1392,7 +1392,7 @@ a {
 }
 
 .forChart h3,.forChart h4,.forChart h5,.forChart h6 {
-    background: #FFC107;
+    background: #ffd800;
     padding: 1rem;
     text-align: center
 }
@@ -1457,7 +1457,7 @@ a {
 }
 
 .newnav ul li a {
-    background: #FFC107;
+    background: #ffd800;
     border: 1px solid #000;
     border-radius: 30px;
     box-shadow: 2px 2px hsla(0,0%,100%,.9);
@@ -1482,7 +1482,7 @@ a {
 }
 
 .sattalogo {
-    background: #FFC107;
+    background: #ffd800;
     padding: 24px 0
 }
 
@@ -1549,7 +1549,7 @@ a {
 }
 
 #clockbox {
-    color: #FFC107;
+    color: #ffd800;
     display: block;
     font-size: 20px;
     font-weight: 700;
@@ -1575,7 +1575,7 @@ a {
 }
 
 .wrapper-yellow {
-    background: #FFC107;
+    background: #ffd800;
     padding-bottom: 2px!important;
     padding-top: 20px!important
 }
@@ -1607,7 +1607,7 @@ a {
 }
 
 .tablebox1 .table .foryellow {
-    background: #FFC107;
+    background: #ffd800;
     color: #000
 }
 
@@ -1641,12 +1641,12 @@ a {
 }
 
 .octoberresultchart {
-    background: #ffc107;
-    background: linear-gradient(180deg,#ffc107,#ffe400);
+    background: #ffd800;
+    background: linear-gradient(180deg,#ffd800,#ffe400);
     border-bottom: 1px solid #000;
     border-top: 2px solid #000;
     color: #000;
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffc107",endColorstr="#ffe400",GradientType=0);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffd800",endColorstr="#ffe400",GradientType=0);
     padding: 20px 0
 }
 
@@ -1659,7 +1659,7 @@ a {
 }
 
 .forfirtcolor {
-    background: #FFC107!important;
+    background: #ffd800!important;
     color: #000;
     font-size: 13px;
     font-weight: 700;
@@ -1704,7 +1704,7 @@ a {
 }
 
 .yellow-link {
-    color: #FFC107;
+    color: #ffd800;
     font-weight: 700;
     -webkit-text-decoration: underline;
     text-decoration: underline
@@ -1730,7 +1730,7 @@ a {
 }
 
 .somelinks ul li a {
-    color: #FFC107;
+    color: #ffd800;
     display: block;
     font-weight: 700;
     text-align: justify
@@ -1743,7 +1743,7 @@ a {
 }
 
 .somelinks2 {
-    background: #FFC107;
+    background: #ffd800;
     padding: 10px 0
 }
 
@@ -1820,7 +1820,7 @@ h4,h6 {
     }
 
     .foryellow {
-        background: #FFC107;
+        background: #ffd800;
         color: #000;
         font-size: 15px!important;
         vertical-align: middle
@@ -1978,7 +1978,7 @@ section.faq-section span.sr {
 }
 
 .newtable td.forfirtcolor {
-    background: #FFC107  !important;
+    background: #ffd800  !important;
 }
 
 section.newtable {
@@ -2238,8 +2238,8 @@ section.game-detail .header_btn span {
     color: #000;
     border-radius: 50px;
 
-    background-color: #ffc107;
-    border: 1px solid #ffc107;
+    background-color: #ffd800;
+    border: 1px solid #ffd800;
     cursor: pointer;
     
     font-weight: 700;
@@ -2668,4 +2668,5 @@ div.lucky-number-section .card-body.munda .swiper-wrapper {
 		}
 
 }
+
 
